--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4083,7 +4083,7 @@
 
 		#banner .content {
 			position: absolute;
-			bottom: 70;
+			bottom: 0;
 			left: 0;
 			background-color: rgba(21, 27, 33, 0.6);
 			color: #ffffff;
@@ -4709,3 +4709,14 @@
 				}
 
 		}
+
+
+
+
+img.logo1 {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    padding: 2em 0;
+    margin: 0 auto;
+}
