--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4085,6 +4085,8 @@
 			position: absolute;
 			bottom: 0;
 			left: 0;
+			right:0;
+			top:0;
 			background-color: rgba(21, 27, 33, 0.6);
 			color: #ffffff;
 			padding: 6.5em 0 4.5em 0 ;
